<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_actividades"
            android:icon="@drawable/actividades"
            android:title="@string/menu_actividades" />
        <item
            android:id="@+id/nav_publicaciones"
            android:icon="@drawable/publicar"
            android:title="@string/menu_publicaciones" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/favoritos"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/salir"
            android:title="Salir"/>
    </group>
</menu>