<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_actividades">

    <fragment
        android:id="@+id/nav_actividades"
        android:name="com.example.turistiandoapp.ui.actividades.MunicipiosFragment"
        android:label="@string/menu_actividades"
        tools:layout="@layout/fragment_municipios" >
        <!--<action
            android:id="@+id/action_nav_actividades_to_actividadesFragment"
            app:destination="@id/actividadesFragment" />-->
        <action
            android:id="@+id/action_nav_actividades_to_registro_turisteando"
            app:destination="@id/registro_turisteando" />
    </fragment>

    <fragment
        android:id="@+id/nav_publicaciones"
        android:name="com.example.turistiandoapp.ui.publicaciones.PublicacionesFragment"
        android:label="@string/menu_publicaciones"
        tools:layout="@layout/fragment_publicaciones" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.example.turistiandoapp.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <!--<fragment
        android:id="@+id/actividadesFragment"
        android:name="com.example.turistiandoapp.ui.actividades.ActividadesFragment"
        android:label="ActividadesFragment"
        tools:layout="@layout/fragment_actividades">
        <action
            android:id="@+id/action_actividadesFragment_to_ActividadDetalleDialogFragment"
            app:destination="@id/ActividadDetalleDialogFragment" />
    </fragment>-->

    <fragment
        android:id="@+id/nav_usuario"
        android:name="com.example.turistiandoapp.ui.usuarios.UsuarioFragment"
        android:label="@string/menu_usuario"
        tools:layout="@layout/fragment_usuario" />
    <activity
        android:id="@+id/registro_turisteando"
        android:name="com.example.turistiandoapp.registro_turisteando"
        android:label="activity_registro_turisteando"
        tools:layout="@layout/activity_registro_turisteando" />
    <!--<dialog
        android:id="@+id/ActividadDetalleDialogFragment"
        android:name="com.example.turistiandoapp.ui.actividades.DetalleActividadDialogFragment"
        android:label="DetalleActividadDialogFragment"
        tools:layout="@layout/fragment_detalle_actividad_dialog"/>-->

</navigation>