<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/cardViewActividades"
    app:cardElevation="6dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageVActividad"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/tViewNombreActividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_actividad"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="25dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tViewPublicadoPor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actividad_por"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="20dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tViewNombrePublicador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publicardor"
                android:gravity="center"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tViewDescripActividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/descrip_actividad"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="19dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
