<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.actividades.DetalleActividad">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CDCDCD"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:id="@+id/imagenActividad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bojaca"
                        android:scaleType="centerCrop"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/black"
                        android:alpha="0.5"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tNombreActividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_actividad"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="25dp"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tPublicadoPor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actividad_por"
                        android:fontFamily="@font/quicksand_bold"
                        android:textSize="20dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tNombrePublicador"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publicardor"
                        android:gravity="center"
                        android:fontFamily="@font/quicksand_bold"
                        android:textSize="20dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tDescripActividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/descrip_actividad"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="19dp"/>

                <TextView
                    android:id="@+id/tCostoPersona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/titulo_costo"
                    android:gravity="center"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="19dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tValorCosto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/costo_persona"
                    android:gravity="center"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="19dp"/>

                <TextView
                    android:id="@+id/tTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="1213123"
                    android:gravity="center"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="19dp"/>
                <TextView
                    android:id="@+id/tDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Calmfkljf"
                    android:gravity="center"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="19dp"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>